--- a/templates/about.html
+++ b/templates/about.html
@@ -44,7 +44,7 @@ About
     <div class="container my-3">
         <h1 class="my-4">Cool Video</h1>
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ITeR2Zx9GcI?rel=0" allowfullscreen></iframe>
+            <iframe width="1280" height="720" src="https://www.youtube.com/embed/OxyV5K3nKqE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <p>If some artist or a writer starts to tell you about the deep meaning of their work, don't believe them. There is only two things they can write about, themselves or their issues, and this woman had a lot of issues.</p>
     </div>
