--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <title>{% block title %}{% endblock title %}</title>
 </head>
 
-<body style="background-color: rgb(58, 9, 9);">
+<body style="background: linear-gradient(to bottom, #990000 0%, #ffffff 100%);">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/">Michael Hinds</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
