--- a/templates/home.html
+++ b/templates/home.html
@@ -18,11 +18,11 @@ Home
                 " class="d-block w-100" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://source.unsplash.com/1900x500/?space,stars
+                    <img src="https://source.unsplash.com/1900x500/?capcom
                 " class="d-block w-100" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://source.unsplash.com/1900x500/?hopeful,quote
+                    <img src="https://source.unsplash.com/1900x500/?rain
                 " class="d-block w-100" alt="">
                 </div>
             </div>
