Added project examples and made things a bit more tidy

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@ About
         <div class="row">
             <div class="col md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://source.unsplash.com/500x300/?kaiju,godzilla" class="card-img-top" alt="...">
+                    <img style="height: 8rem;" src="https://source.unsplash.com/500x300/?kaiju,godzilla" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Web Developer</h5>
                         <p class="card-text">This is the bulk of my programming experience. I've developed numerous apps for personal projects and practice. I love the endless possibilities being a developer offers me!</p>
@@ -20,7 +20,7 @@ About
             </div>
             <div class="col md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://source.unsplash.com/500x300/?kaiju,godzilla" class="card-img-top" alt="...">
+                    <img style="height: 8rem;" src="https://source.unsplash.com/500x300/?space,stars" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Discord Developer</h5>
                         <p class="card-text">I've developed a few different discordbots as a hobby. Once their more developed I'll link them in my projects tab.</p>
@@ -30,7 +30,7 @@ About
             </div>
             <div class="col md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="https://source.unsplash.com/500x300/?kaiju,godzilla" class="card-img-top" alt="...">
+                    <img style="height: 8rem;" src="https://source.unsplash.com/500x300/?volcano,lava" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Machine Learning</h5>
                         <p class="card-text">I am interested in machine learning but my journey here is just beginning. If you have any novice project ideas or pointers, feel free to send me a message in the contact me tab!</p>
