--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,7 +26,7 @@ Contact
               <textarea class="form-control" id="desc" name="desc" rows="3"></textarea>
             </div>
 
-            <button type="submit" class="btn btn-success">Success</button>
+            <button type="submit" class="btn btn-success">Submit</button>
 
           </form>
       </div>
