--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@ Home
         <div class="row">
             <div class="col md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="{% static 'img/16038-Godzilla-kaiju-748x468.jpg' %}" class="card-img-top" alt="...">
+                    <img style="height: 12rem;" src="{% static 'img/16038-Godzilla-kaiju-748x468.jpg' %}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Designer</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -52,7 +52,7 @@ Home
             </div>
             <div class="col md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="{% static 'img/9gsz7po9qd641.jpg' %}" class="card-img-top" alt="...">
+                    <img style="height: 12rem;" src="{% static 'img/9gsz7po9qd641.jpg' %}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Developer</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -63,7 +63,7 @@ Home
             </div>
             <div class="col md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="{% static 'img/unnamed.png' %}" class="card-img-top" alt="...">
+                    <img style="height: 12rem;" src="{% static 'img/unnamed.png' %}" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Sad boi</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -78,7 +78,7 @@ Home
         <div class="media">
             <img src="/static/img/CvWpAWgUIAAsAXY.jpg" class="mr-3" alt="...">
             <div class="media-body">
-              <h5 class="mt-0">Media heading</h5>
+              <h5 class="mt-0">Wow cool picture!</h5>
               Media heading!
             </div>
           </div>
