--- a/templates/projects.html
+++ b/templates/projects.html
@@ -10,7 +10,7 @@ Projects
         <div class="row">
             <div class="col md-4">
                 <div class="card" style="width: 18rem;">
-                    <img style="height: 8rem;" src="https://lh3.googleusercontent.com/Wv5_Xbqml38zDsqDMQcqGIl2gd_zDiI9iga6hmuk9SV78BLK0CCageyzNPlIcP7tYgxeQearlo4NSSeWaPst1VjQN5cuojrnhkgokpcLGIHCNvUzmGXymdQr7m-9neXrhY8OY43z7ReTqBolWwuEJswDDqgCBQiBtU0u0SddG3mBQalt-zHDphVEDfXGxY6g80WRVJlrFuk6b5O4zhnPutf0tNfQh141mpUvIWMsVyNn1i33Lfj5iTU9ci_59ERVq62Wmzsn1E7vmuICN-1I1lzUIxGuX3PjzOuMzuDRTbOSIqyhPXVqsAFRPyrucOgpedJ6GDc_AiVEZpN7MMpUWwk_swdQEDpccCed02fTwu1X2_TzRfcsckaU6Kp-8ePbHj16UpyyAIHhyXhXTG_xwgwDcj93PshS6prQtiQGJ4rN768b9GHKdU9yYJVlJLbImGsWDqbNWV78YTtwnrr7R7nbZ379i6Caq4oMCiyVPPr1-Oz_ilULay7k0MxVOqZvYsRcj0JNBZy0Dha05AjwFf3F84ASwoG50Xty2k-XTyBQcbMXjBhgNgjHtDrZ4A0pcM6uDDfw2ePnCQmE5Rx297j-pMqMzgUIZwqqQlY1pen7Lt8ER6vN7PZVo39chRidLB2-wjDUl_HyldEdkC3MBLSQUv16-XZ30LUg4P0sQOdI0_sADrRp1QMf81Ta=w1565-h758-no?authuser=3" class="card-img-top" alt="...">
+                    <img style="height: 8rem;" src="/static/img/LeagueSpy4.PNG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">League Spy</h5>
                         <p class="card-text">Player statistic lookup application using Riot Games APIs to provide accurate and up to date information! Coded in Java.</p>
@@ -20,21 +20,21 @@ Projects
             </div>
             <div class="col md-4">
                 <div class="card" style="width: 18rem;">
-                    <img style="height: 8rem;" src="https://lh3.googleusercontent.com/hhjJ8hBJyDFw_13BHqf6U_C7YEvCn1ys8e-g-ImEVrh8MtvAri0Q1IsjqzbxjKA-qHTnUGGOAGNaa_9U4yICz3_iZ9z-N4l550hDLQ49bmZeWWCA-uqb7l0XODF2HfhrE7vIeFomF8lW1zWvvnU8I7dmRkB8m-jR3mm4wK9ZXRs4ogtDuFMLPvKHV6WLd1hOCsUOxsS3jCuaUG8bmOIPp3A6bJCud5mamfa_xW3PMiipzmb7D2RY2FBjT_MrvfZLyEtfOyH6CRDBv-epduZEk5mlOzpTSHXD2lTQzNoegGRZ76iWFvqMCdqPfB8TVsrjY0omYj19T5uPTPraENss-W1PWDjgrkiXV1p5D0m5WowcwxWBaTkL-nHQwA-YDTtP7U7hGeeHinm2slQsSbYbfFISpaJfWMUgDF0POExLWswrMxlItjXUGzebzuqm23iW_Oo8_vW1laLPHRAWqfF72w7mEopuVIUNXmHoS_rI1Ny_CnpyVfC8SeW1kn1f00CukTWACRogIkGwHF0M-abmKcCn5ZOLjK9Stbp1tDujKcavc15CmUs453mOX-Z39InXbtq3J1WEc_ENeGIgVBK_bZS8vdKcxScqmnwoIhhi6_lCJhfICIk1hRiZ3BWNjpOnw9tY4WbriOGAMl9IeVYpjA8Pxz5c7sgzLfMVcLlVOQBMqEct9IjJlXZAWC2Q=w1919-h969-no?authuser=3" class="card-img-top" alt="...">
+                    <img style="height: 8rem;" src="/static/img/LeagueSpy2.PNG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Champion Lookup</h5>
                         <p class="card-text">Champion ability and lore lookup application using Riot Games APIs, bootstrap implemented for a more professional look. Coded in Java.</p>
-                        <a href="/championlookup" class="btn btn-primary">Click for Demo</a>
+                        <a href="/championlookup" class="btn btn-primary">Click for more info</a>
                     </div>
                 </div>
             </div>
             <div class="col md-4">
                 <div class="card" style="width: 18rem;">
-                    <img style="height: 8rem;" src="https://lh3.googleusercontent.com/vl_VAKWYkKOU2NgGOQRDUaRkV55WGJxQtbRr5iHT5s2PBcjs3P2HdRfugCjFF7LWsmPYTgrE7paq-4Pol_tl5u97YEG4yNBhRJZvCOj9xUB4TyG-Amd5CLzZvZgs39Ru5_aE7WCuzM81x59aJibbIGXGfJX1Vt2VrcVRC2v2YVIZJwaA4FzjHVJqma8Kc2odk1FChuHUHoS4Udhw1ENlkKLMjIiHnNWHQ490bo4H6_tI317YJp0ySrncXlpelhLnc3hu7AtYw9hPecc_7Rq2av5AlZJ8MEMATyVnEqPlKsbqlU1RnBOmLj9MBd8AQ0gz5yWWSeXBJEAodf8nA_4SPd25gqVm8BmIgcAbkqr-Mwd7tsflMYBSpbz71FWF6Oe7HABKrT7prd-TKhsCbmqGL67u_8Fzv7wor0TN_u6JPmLrdr9Jva7kyMiDzn9qMZ4pS6gs7y51j9AVCv_l4tVEGXqwyJpBxH96s-es3t7ldNh1RUQyT1SsGs9L8TdRfdTpROmW8ZIJFfO__JWPaB1K2C5x71wJUQRBzCzG0bRMn1mGit1AcwkqoyXYMAkVKIESFQJ2I-1OGWoV-o0Q3bV1wcG7IVVfLPaSc03Dbeb22nPfXSqIeyKVZiPs6MrGJj7P5aZjQrOb-phiznDeu0ULLjDuzGdDh9eg_t7zNc8UMKqGRK65W-ZhAlMGCWH9=w1920-h765-no?authuser=3" class="card-img-top" alt="...">
+                    <img style="height: 8rem;" src="/static/img/W32.PNG" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">W3 Voting</h5>
                         <p class="card-text">My first coding project. A pop culture voting application with leaderboard system and user profiles and comments. Coded in Python.</p>
-                        <a href="/W3" class="btn btn-primary">Click for Demo</a>
+                        <a href="/W3" class="btn btn-primary">Click for more info</a>
                     </div>
                 </div>
             </div>
