Changed minor details, nothing important

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,7 +14,7 @@ About
                     <div class="card-body">
                         <h5 class="card-title">Web Developer</h5>
                         <p class="card-text">This is the bulk of my programming experience. I've developed numerous apps for personal projects and practice. I love the endless possibilities being a developer offers me!</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Click here for more info</a>
                     </div>
                 </div>
             </div>
@@ -24,7 +24,7 @@ About
                     <div class="card-body">
                         <h5 class="card-title">Discord Developer</h5>
                         <p class="card-text">I've developed a few different discordbots as a hobby. Once their more developed I'll link them in my projects tab.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Click here for more info</a>
                     </div>
                 </div>
             </div>
@@ -34,7 +34,7 @@ About
                     <div class="card-body">
                         <h5 class="card-title">Machine Learning</h5>
                         <p class="card-text">I am interested in machine learning but my journey here is just beginning. If you have any novice project ideas or pointers, feel free to send me a message in the contact me tab!</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <a href="#" class="btn btn-primary">Click here for more info</a>
                     </div>
                 </div>
             </div>
